--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,29 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-image: url('/home/ben/projects/js/TOP/weatherApp/bliss.jpg');
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center; 
+  width: 100%;
+  height: 100vh; 
+}
+
+.minion input {
+  border: 2px solid black;
+  border-radius: 3%;
+}
+
+h2 {
+  color: black;
+}
+
+.minion {
+  margin-top: 5rem;
+}
+
+.bello {
+  margin-top: 2.5rem;
 }
 
 .logo {
